--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-#TODO: most likely some dependencies here can be removed
+attrs==23.1.0
 blinker==1.7.0
 cachetools==5.3.2
 certifi==2023.7.22
@@ -6,6 +6,7 @@ charset-normalizer==3.3.2
 click==8.1.7
 cloudevents==1.10.1
 deprecation==2.1.0
+exceptiongroup==1.1.3
 Flask==2.3.3
 functions-framework==3.4.0
 google-api-core==2.14.0
@@ -16,19 +17,29 @@ grpc-google-iam-v1==0.12.7
 grpcio==1.59.2
 grpcio-status==1.59.2
 gunicorn==20.1.0
+h11==0.14.0
 idna==3.4
 importlib-metadata==6.8.0
 itsdangerous==2.1.2
 Jinja2==3.1.2
 MarkupSafe==2.1.3
+outcome==1.3.0.post0
 packaging==23.2
 proto-plus==1.22.3
 protobuf==4.25.0
 pyasn1==0.5.0
 pyasn1-modules==0.3.0
+PySocks==1.7.1
 requests==2.31.0
 rsa==4.9
+selenium==4.15.2
+selenium-stealth==1.0.6
+sniffio==1.3.0
+sortedcontainers==2.4.0
+trio==0.23.1
+trio-websocket==0.11.1
 urllib3==2.1.0
 watchdog==3.0.0
 Werkzeug==3.0.1
+wsproto==1.2.0
 zipp==3.17.0
