--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 attrs==23.1.0
+beautifulsoup4==4.12.2
 blinker==1.7.0
 cachetools==5.3.2
 certifi==2023.7.22
@@ -30,12 +31,14 @@ protobuf==4.25.0
 pyasn1==0.5.0
 pyasn1-modules==0.3.0
 PySocks==1.7.1
+pytz==2023.3.post1
 requests==2.31.0
 rsa==4.9
 selenium==4.15.2
 selenium-stealth==1.0.6
 sniffio==1.3.0
 sortedcontainers==2.4.0
+soupsieve==2.5
 trio==0.23.1
 trio-websocket==0.11.1
 urllib3==2.1.0
